--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
-  "jest": {
-  },
+  "jest": {},
   "dependencies": {
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-native-elements": "^0.18.2",
     "react-native-i18n": "^2.0.9",
+    "react-native-progress": "^3.4.0",
     "react-native-sound": "^0.10.4",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19",
