--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.49.5",
     "react-native-elements": "^0.18.2",
     "react-native-i18n": "^2.0.9",
+    "react-native-keep-awake": "^2.0.6",
     "react-native-progress": "^3.4.0",
     "react-native-sound": "^0.10.4",
     "react-native-vector-icons": "^4.4.2",
