--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   "jest": {},
   "dependencies": {
     "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5",
-    "react-native-elements": "^0.18.2",
-    "react-native-i18n": "^2.0.9",
-    "react-native-keep-awake": "^2.0.6",
-    "react-native-progress": "^3.4.0",
-    "react-native-sound": "^0.10.4",
-    "react-native-vector-icons": "^4.4.2",
-    "react-navigation": "^1.0.0-beta.19",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.4.0",
-    "tcomb-form-native": "^0.6.11"
+    "react-native": "0.49.5",
+    "react-native-elements": "0.18.2",
+    "react-native-i18n": "2.0.9",
+    "react-native-keep-awake": "2.0.6",
+    "react-native-progress": "3.4.0",
+    "react-native-sound": "0.10.4",
+    "react-native-vector-icons": "4.4.2",
+    "react-navigation": "1.0.0-beta.19",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-persist": "5.4.0",
+    "tcomb-form-native": "0.6.11"
   }
 }
